# shared-journal

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: README.md
examples/: journal.rs  master.rs  store.rs
scripts/: test_coverage.sh
src/: error.rs  journal.rs  lib.rs  orchestrator.rs  segment.rs  stream.rs
src/client/: Cargo.toml
src/client/examples/: bench.rs  engine.rs  journal.rs
src/client/src/: lib.rs  stream.rs  tenant.rs
src/client/src/core/: mem_store.rs  progress.rs  replicate.rs  stream.rs
src/client/src/group/: io.rs  stream.rs  timer.rs
src/client/src/master/: client.rs  mod.rs  (+2 more)
src/common/: Cargo.toml
src/components/metrics/: Cargo.toml
src/journal/: mod.rs  policy.rs  segment.rs  stream.rs  worker.rs
src/journal/master/: mod.rs  remote.rs
src/journal/store/: compound.rs  mod.rs  remote.rs  segment.rs  stream.rs
src/journal/worker/: core.rs  mem_store.rs  progress.rs  recovery.rs  timer.rs
src/master/: Cargo.toml  mem.rs  mod.rs  orchestrator.rs
src/master/examples/: master.rs
src/master/src/: lib.rs  master.rs  server.rs  stream.rs
src/master/src/orchestrator/: mod.rs  simple.rs
src/proto/: Cargo.toml  master.proto  mod.rs  seg_store.proto  server.proto  store.proto
src/proto/proto/: master.proto  store-manifest.proto  store-meta.proto  store.proto
src/proto/src/: cast.rs  lib.rs
src/seg_store/: mem.rs  mod.rs  segment.rs
src/server/: mem.rs  mod.rs
src/servers/: mod.rs
src/servers/master/: mem.rs  mod.rs
src/servers/store/: mem.rs  mod.rs
src/store/: Cargo.toml  mem.rs  mod.rs  segment.rs
src/store/examples/: store.rs
src/store/src/: lib.rs  server.rs
src/stream-engine/client/: Cargo.toml
src/stream-engine/master/: Cargo.toml
src/stream-engine/store/: Cargo.toml
tools/: test_coverage.sh
(+40 files in other folders)
