[package]
name = "engula-shared-journal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://engula.io"
description = "A stream storage implementations."

[dependencies]
async-trait = "0.1"
bitflags = "1.3.2"
derivative = "2.2.0"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
log = "0.4.14"
prost = "0.9"
thiserror = "1.0"
tokio = { version = "1.13", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"

[dev-dependencies]
ctor = "0.1.21"
pretty_env_logger = "0.4.0"
tempfile = "3"

[build-dependencies]
tonic-build = "0.6"
